@@ -109,7 +109,10 @@ postgis/legacy_minimal.sql
 postgis/legacy.sql
 postgis/postgis.sql
 postgis/postgis_proc_set_search_path.sql
+postgis/postgis_for_extension.sql
 postgis/postgis_upgrade.sql*
+postgis/postgis_upgrade_for_extension.sql
+postgis/postgis_upgrade_for_extension.sql.in
 postgis/sfcgal_upgrade.sql*
 postgis/sqldefines.h
 postgis/uninstall_legacy.sql
@@ -126,8 +129,10 @@ raster/rt_pg/rtpostgis.sql
 raster/rt_pg/rtpostgis_drop.sql
 raster/rt_pg/rtpostgis_legacy.sql
 raster/rt_pg/rtpostgis_proc_set_search_path.sql
+raster/rt_pg/rtpostgis_for_extension.sql
 raster/rt_pg/rtpostgis_upgrade.sql.in
 raster/rt_pg/rtpostgis_upgrade*.sql
+raster/rt_pg/rtpostgis_upgrade_for_extension.sql.in
 raster/rt_pg/uninstall_rtpostgis.sql
 raster/scripts/Makefile
 raster/scripts/python/Makefile
