@@ -4587,9 +4587,16 @@ CREATE OR REPLACE FUNCTION ST_AsKML(geom geometry, maxdecimaldigits int4 DEFAULT
 -- ST_AsGeoJson(geom, precision, options) / version=1
 -- Changed 2.0.0 to use default args and named args
 CREATE OR REPLACE FUNCTION ST_AsGeoJson(geom geometry, maxdecimaldigits int4 DEFAULT 15, options int4 DEFAULT 0)
-	RETURNS TEXT
+	RETURNS text
 	AS 'MODULE_PATHNAME','LWGEOM_asGeoJson'
-	LANGUAGE 'c' IMMUTABLE STRICT  _PARALLEL
+	LANGUAGE 'c' IMMUTABLE STRICT _PARALLEL
+	_COST_LOW;
+
+-- Availability: 3.0.0
+CREATE OR REPLACE FUNCTION ST_AsGeoJson(r record, geom_column text DEFAULT '', maxdecimaldigits int4 DEFAULT 15, pretty_print bool DEFAULT false)
+	RETURNS text
+	AS 'MODULE_PATHNAME','ST_AsGeoJsonRow'
+	LANGUAGE 'c' STABLE STRICT _PARALLEL
 	_COST_LOW;
 
 -----------------------------------------------------------------------
