@@ -31,6 +31,7 @@ PostGIS 3.0.0
            Libre de Bruxelles (ULB), Darafei Praliaskouski)
   - #4171, ST_3DLineInterpolatePoint (Julien Cabieces, Vincent Mora)
   - #4311, Introduce `--with-wagyu` as an option for MVT polygons (Raúl Marín)
+  - #1833, ST_AsGeoJSON(row) generates full GeoJSON Features (Joe Conway)
 
 * Enhancements and fixes *
   - #4342, Move deprecated functions into legacy.sql file
